## Process this file with automake to produce Makefile.in

INCLUDES =

icpld_CXXFLAGS =\
	 -Wall -Wimplicit -Wunused\
	 -g -O1

bin_PROGRAMS = icpld

icpld_SOURCES = \
	displog.cpp\
	firstr.cpp\
	fork.cpp\
	killproc.cpp\
	logturn.cpp\
	status.cpp\
	daemonize.cpp\
	filecheck.cpp\
	verip.cpp\
	help.cpp\
	signals.cpp\
	reset.cpp\
	parseconf.cpp\
	fixpath.cpp\
	parseargs.cpp\
	checkinp.cpp\
	wlogs.cpp\
	info.cpp\
	getcwd.cpp\
	disperrs.cpp

icpld_LDFLAGS = 

icpld_LDADD = 

